# StockAnalysis

./: LICENSE  setup.cfg
src/: stock_data.py
