[metadata]
name = StockAnalysis
version = 1.0.1
description = Software StockAnalysis help user to analyze quoted share, this analysis contains stock trend forecast and trade.
license = MIT License
platforms = win7/win8/win10-64bit
keywords = quoted share

[options]
zip_safe = False
include_package_data = True
packages = find:
install_requires =
	requests
	importlib-metadata; python_version < "3.8"

[options.packages.find]
include = src